# resply

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  proxy-example-conf.json
include/: cli-common.h  optional.h  resp-parser.h  resply.h
paper/: Makefile  paper.tex
protos/: resp.proto  rslp.proto
src/: grpc-cli.cc  libresply.cc  proto-cli.cc  proxy.cc  resp-parser.cc  resply-cli.cc
tests/: distlock.cc  mget-array.cc  ping-pong.cc  pipelined.cc  pubsub.cc
